# inbox-triage

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
inbox_triage/: cache.py  classify.py  cli.py  dedup.py  features.py  jmap.py  train.py
